packages/fuels-abigen-macro/tests/ui/abigen_macro/missing_name_attr.rs
use fuels_abigen_macro::abigen;

abigen!(Contract(abi = "some-abi.json"));

fn main() {}
